--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,6 +4,7 @@
     left: 0;
     right: 0;
     z-index: 10;
+    padding-bottom: 200px;
 }
 
  .header-links {
@@ -13,6 +14,7 @@
 
 .header-links a{
     padding: 5px;
+    text-decoration: none;
 }
 
 .logo {
