--- a/src/Inspiration/Inspiration.css
+++ b/src/Inspiration/Inspiration.css
@@ -11,6 +11,13 @@
     font-size: 75px;
 }
 
+.inspiration-text {
+    margin-left: 100px;
+    margin-right:100px;
+    text-align: center;
+
+}
+
 .inspiration-photo-wheel {
     width: 50%;
     margin: auto;
