--- a/src/Impact/Impact.css
+++ b/src/Impact/Impact.css
@@ -2,6 +2,12 @@
     padding: 20px;
 }
 
+.impact-text {
+    background-color:RGBA(236,225,201,0.60);
+    padding:30px;
+    border-radius:40px;
+}
+
 @media screen and (min-width: 320px) {
     .impact-photo {
         width: 65%;
@@ -31,6 +37,10 @@
 }
 
 @media screen and (min-width: 1000px) {
+    .impact {
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
     .impact-header {
         font-size: 70px;
         margin: auto;
@@ -41,7 +51,7 @@
     }
 
     .impact-text {
-        margin-top:200px;
+        margin-top:100px;
         width: 50%;
     }
 }
