--- a/src/Inspiration/Inspiration.css
+++ b/src/Inspiration/Inspiration.css
@@ -12,13 +12,15 @@
 }
 
 .inspiration-text {
-    margin-left: 100px;
-    margin-right:100px;
+    margin-left: 200px;
+    margin-right:200px;
     text-align: center;
-
+    background-color:RGBA(236,225,201,0.56);
+    padding:30px;
+    border-radius:40px;
 }
 
 .inspiration-photo-wheel {
-    width: 50%;
+    width: 40%;
     margin: auto;
 }
