--- a/src/OurStory/OurStory.css
+++ b/src/OurStory/OurStory.css
@@ -8,10 +8,20 @@
 @media screen and (min-width: 320px) {
     .our-story-text {
         width: 90%;
+        background-color:RGBA(236,225,201,0.56);
+        padding:30px;
+        border-radius:40px;
     }
 }
 
 @media screen and (min-width: 765px) {
 
+}
+
+@media screen and (min-width: 1000px) {
+    .our-story {
+        padding-top: 300px;
+        padding: bottom 200px;
+    }
 }
 
