--- a/src/Inspiration/Inspiration.css
+++ b/src/Inspiration/Inspiration.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     justify-content: center;
     margin-bottom: 40px;
+    margin-top: 60px;
 }
 
 .inspiration h3 {
     margin: auto;
-    padding: 40px;
+    padding: 20px;
     font-size: 75px;
 }
 
@@ -16,11 +17,24 @@
     margin-right:200px;
     text-align: center;
     background-color:RGBA(236,225,201,0.56);
-    padding:30px;
+    padding:50px;
     border-radius:40px;
 }
 
+.inspo-link {
+    margin: auto;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.inspo-link:hover {
+    background-color:RGBA(40,80,37,0.64);
+    border-radius: 10px;
+    padding: 15px;
+}
+
 .inspiration-photo-wheel {
-    width: 40%;
+    width: 35%;
     margin: auto;
 }
