--- a/src/Impact/Impact.css
+++ b/src/Impact/Impact.css
@@ -3,9 +3,11 @@
 }
 
 .impact-text {
-    background-color:RGBA(236,225,201,0.60);
+    background-color:RGBA(236,225,201,0.75);
     padding:30px;
     border-radius:40px;
+    text-shadow: 1px 1px grey;
+    font-size: 20px;
 }
 
 @media screen and (min-width: 320px) {
@@ -39,7 +41,7 @@
 @media screen and (min-width: 1000px) {
     .impact {
         padding-top: 200px;
-        padding-bottom: 200px;
+        padding-bottom: 420px;
     }
     .impact-header {
         font-size: 70px;
