--- a/src/OurStory/OurStory.css
+++ b/src/OurStory/OurStory.css
@@ -8,9 +8,11 @@
 @media screen and (min-width: 320px) {
     .our-story-text {
         width: 90%;
-        background-color:RGBA(236,225,201,0.56);
+        background-color:RGBA(236,225,201,0.75);
         padding:30px;
         border-radius:40px;
+        text-shadow: 1px 1px grey;
+        font-size: 20px;
     }
 }
 
@@ -21,7 +23,7 @@
 @media screen and (min-width: 1000px) {
     .our-story {
         padding-top: 300px;
-        padding: bottom 200px;
+        padding-bottom: 350px;
     }
 }
 
