--- a/src/OurStory/OurStory.css
+++ b/src/OurStory/OurStory.css
@@ -25,5 +25,10 @@
         padding-top: 300px;
         padding-bottom: 350px;
     }
+
+    .arrow-scroll-3 {
+        display: flex;
+        margin-top: 100px;
+    }
 }
 
