--- a/src/InspirationFullPg/InspirationFullPg.css
+++ b/src/InspirationFullPg/InspirationFullPg.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url(./desert-image.jpeg) no-repeat center fixed;
+    /* background: url(./desert-image.jpeg) no-repeat center fixed; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -12,7 +12,10 @@
 .inspiration-text-full {
     width: 80%;
     text-align: center;
-    margin-top: 120px
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .inspiration-span {
@@ -20,6 +23,7 @@
 }
 
 .photo-inspo {
-    width: 50%;
+    display: flex;
     margin: auto;
+    width: 50%;
 }
