--- a/src/OurStoryFullPg/OurStoryFullPg.css
+++ b/src/OurStoryFullPg/OurStoryFullPg.css
@@ -5,27 +5,82 @@
     -o-background-size: cover;
     background-size: cover;
     height: 1000px;
+    overflow: auto;
 }
 
 .our-story-text-full {
     position: fixed;
+    overflow: auto;
     margin: 10%;
 }
 
 .our-story-header-full {
-    font-size: 75px;
+    font-size: 85px;
+    text-shadow: 3px 3px RGBA(40,80,37,0.70);
 }
 
 .our-story-full h3 {
-    background-color:RGBA(40,80,37,0.70);
-    width: 200px;
     padding:20px;
     border-radius: 5px;
     margin: auto;
+    font-size: 40px;
+    text-shadow: 2px 3px RGBA(40,80,37,0.70);
+
 }
 
 .our-story-full p {
-    background-color:RGBA(157,132,101,.8);
+    background-color:RGBA(157,132,101,.9);
     padding: 25px;
     border-radius: 10px;
+    font-size: 20px;
+}
+
+@media screen and (min-width: 320px) {
+    .our-story-header-full {
+        font-size: 35px;
+        margin: 5%;
+    }
+
+    .our-story-full h3 {
+        padding: 5px;
+        font-size: 20px;
+    }
+
+    .our-story-full p {
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 765px) {
+    .our-story-text-full {
+        position: fixed;
+        margin: 10%;
+    }
+    
+    .our-story-header-full {
+        font-size: 85px;
+    }
+    
+    .our-story-full h3 {
+        padding:20px;
+        border-radius: 5px;
+        margin: auto;
+        font-size: 40px;
+    }
+    
+    .our-story-full p {
+        padding: 18px;
+        border-radius: 10px;
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .our-story-header-full {
+        padding: 0px;
+    }
+    .our-story-full p {
+        padding: 10px;
+        font-size: 25px;
+    }
 }
