--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -3,6 +3,7 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
+    font-size: 10px;
 }
 
 .copyright {
@@ -12,3 +13,4 @@ footer{
 .build-credit {
     float: right;
 }
+
