--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -10,6 +10,7 @@
  .header-links {
     float: right;
     margin-top:25px;
+    text-shadow: 1px 2px RGBA(40,80,37,0.90);
 }
 
 .header-links a{
@@ -31,8 +32,11 @@
 
 
 @media screen and (min-width: 320px) {
+    .logo {
+        width:13%;
+    }
     .header-links {
-        font-size: 12px;
+        font-size: 14px;
     }
 }
 
@@ -42,5 +46,16 @@
         font-size: 20px;
     }
 }
+
+@media screen and (min-width: 765px) {
+    .logo {
+        width: 10%;
+    }
+
+    .header-links {
+        font-size: 30px;
+    }
+}
+
 
 
