--- a/src/Impact/Impact.css
+++ b/src/Impact/Impact.css
@@ -3,20 +3,33 @@
 }
 
 .impact-text {
-    background-color:RGBA(236,225,201,0.75);
+    background-color:RGBA(236,225,201,0.9);
     padding:30px;
     border-radius:40px;
     text-shadow: 1px 1px grey;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 @media screen and (min-width: 320px) {
-    .impact-photo {
-        width: 65%;
+    .impact-text {
+        margin-top: 50px;
+        font-size: 18px;
+    }
+
+    .arrow-scroll-2 {
+        display: flex;
+        justify-content: center;
+        margin-top:60px;
+        margin-left: 50px;
+        margin-bottom: 200px;
     }
 }
 
 @media screen and (min-width: 765px) {
+    .impact {
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
     .photo {
         width: 40%;
         margin-right: 0;
@@ -36,6 +49,11 @@
         float: right;
         width: 40%;
     }
+
+    .arrow-scroll-2 {
+        margin-top: 200px;
+    }
+
 }
 
 @media screen and (min-width: 1000px) {
