--- a/src/IntroPage/IntroPage.css
+++ b/src/IntroPage/IntroPage.css
@@ -7,18 +7,6 @@
     margin-bottom: 200px;
 }
 
-#myVideo {
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow: none;
-    z-index: -100;
-  }
-
 .intro-page {
     margin-top:200px;
 }
@@ -46,4 +34,109 @@
 .arrow-scroll {
     margin-top: 150px;
     display: flex;
+}
+
+#myVideo {
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: none;
+    z-index: -100;
+  }
+
+
+@media (min-aspect-ratio: 16/9) {
+    #myVideo {
+        width:100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    #myVideo { 
+        width:auto;
+        height: 100%;
+    }
+}
+
+@media (max-width: 760px) {
+    #myVideo {
+        display: none;
+    }
+    body {
+        background: url('mobile3.jpg') no-repeat center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        
+    }
+}
+
+@media screen and (min-width: 365px) {
+    .intro-button {
+        width: 150px;
+        font-size: 20px;
+        float: none;
+        margin-right: 0px;
+        margin-left: 10px
+    }
+
+    .intro-header {
+        padding: 20px;
+        font-size: 35px;
+        text-shadow: 2px 2px RGBA(40,80,37,0.80);
+    }
+
+    .arrow-scroll {
+        margin-top: 70px;
+        margin-left: 50px;
+    }
+}
+
+@media screen and (min-width: 765px) {
+    .intro {
+        margin-top: 350px;
+        margin-bottom: 350px;
+    }
+
+    .intro-button{
+        margin-right: 80px;
+        float: right;
+        width: 300px;
+        height: 100px;
+        font-size: 30px;
+    }
+
+    .arrow-scroll {
+        margin-top: 300px;
+        margin-left: 50px;
+    }
+    
+
+}
+
+@media screen and (min-width: 1000px) {
+    .intro-button{
+        margin-right: 150px;
+        float: right;
+        width: 300px;
+        height: 100px;
+        font-size: 30px;
+    }
+
+    .intro-header {
+        padding: 120px;
+        font-size: 50px;
+    }
+
+    .arrow-scroll {
+        margin-top: 150px;
+        display: flex;
+    }
+
 }
