--- a/src/OurStoryFullPg/OurStoryFullPg.css
+++ b/src/OurStoryFullPg/OurStoryFullPg.css
@@ -32,6 +32,13 @@
     font-size: 20px;
 }
 
+.catch-line {
+    text-align: center;
+    text-shadow: 2px 3px RGBA(40,80,37,0.70);
+    border-radius: 5px;
+    text-decoration: underline;
+}
+
 @media screen and (min-width: 320px) {
     .our-story-full {
         height: 175%;
@@ -48,7 +55,12 @@
     }
 
     .our-story-full p {
-        font-size: 12px;
+        font-size: 13px;
+    }
+
+    .catch-line {
+        font-size: 25px; 
+        text-shadow: 2px 2px RGBA(40,80,37,0.70);
     }
 }
 
@@ -77,6 +89,11 @@
         border-radius: 10px;
         font-size: 20px;
     }
+
+    .catch-line {
+        font-size: 35px; 
+        text-shadow: 3px 3px RGBA(40,80,37,0.70);
+    }
 }
 
 @media screen and (min-width: 1000px) {
@@ -86,5 +103,13 @@
     .our-story-full p {
         padding: 10px;
         font-size: 23px;
+    }
+
+    .catch-line {
+        font-size: 50px; 
+        margin-left: 25%;
+        margin-right: 25%;
+        text-shadow: 3px 3px RGBA(40,80,37,0.70);
+
     }
 }
