--- a/src/OurStoryFullPg/OurStoryFullPg.css
+++ b/src/OurStoryFullPg/OurStoryFullPg.css
@@ -41,7 +41,11 @@
 
 @media screen and (min-width: 320px) {
     .our-story-full {
-        height: 175%;
+        height: 210%;
+    }
+
+    .our-story-text-full {
+        margin-top: 100px;
     }
     
     .our-story-header-full {
@@ -64,9 +68,15 @@
     }
 }
 
+@media screen and (min-width: 500px) {
+    .our-story-full {
+        height: 175%;
+    }
+}
+
 @media screen and (min-width: 765px) {
     .our-story-full {
-        height: 150%;
+        height: 155%;
     }
 
     .our-story-text-full {
@@ -97,6 +107,10 @@
 }
 
 @media screen and (min-width: 1000px) {
+    .our-story-full {
+        height: 175%;
+    }
+
     .our-story-header-full {
         padding: 0px;
     }
@@ -111,5 +125,11 @@
         margin-right: 25%;
         text-shadow: 3px 3px RGBA(40,80,37,0.70);
 
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .our-story-full {
+        height: 165%;
     }
 }
