--- a/src/IntroPage/IntroPage.css
+++ b/src/IntroPage/IntroPage.css
@@ -19,6 +19,7 @@
     height: 100px;
     font-size: 30px;
     background-color:RGBA(40,80,37,0.64);
+    font-family: 'Vollkorn SC', serif;
 }
 
 .intro-link:hover{
@@ -29,6 +30,7 @@
 .intro-header {
     padding: 120px;
     font-size: 50px;
+    font-family: 'Vollkorn SC', serif;
 }
 
 .arrow-scroll {
