--- a/src/OurStoryFullPg/OurStoryFullPg.css
+++ b/src/OurStoryFullPg/OurStoryFullPg.css
@@ -8,12 +8,15 @@
 }
  
 .our-story-text-full {
+    background-color:RGBA(157,132,101,.9);
+    box-shadow: 1px 2px 4px RGBA(40,80,37,0.90);
     margin: 10%;
+    border-radius: 20px;
 }
 
 .our-story-header-full {
     font-size: 85px;
-    text-shadow: 3px 3px RGBA(40,80,37,0.70);
+    text-shadow: 3px 3px RGBA(40,80,37,0.90);
     font-family: 'Vollkorn SC', serif;
 }
 
@@ -27,7 +30,7 @@
 }
 
 .our-story-full p {
-    background-color:RGBA(157,132,101,.9);
+    background-color:RGBA(157,132,101,.45);
     font-family: 'Montserrat', sans-serif;
     padding: 25px;
     border-radius: 10px;
@@ -40,6 +43,11 @@
     border-radius: 5px;
     text-decoration: underline;
     font-family: 'Vollkorn SC', serif;
+}
+
+.solution-text {
+    text-shadow: 2px 3px RGBA(40,80,37,0.70);
+    font-size: 40px;
 }
 
 @media screen and (min-width: 320px) {
@@ -133,6 +141,10 @@
 
 @media screen and (min-width: 1400px) {
     .our-story-full {
-        height: 180%;
+        height: 210%;
+    }
+
+    .our-story-text-full {
+        margin-top: 200px;
     }
 }
