--- a/src/ImpactFullPg/ImpactFullPg.css
+++ b/src/ImpactFullPg/ImpactFullPg.css
@@ -5,26 +5,67 @@
     -o-background-size: cover;
     background-size: cover;
     position: absolute; 
+    width: 100%;
+}
+
+.impact-full {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 300px;
+    padding-top: 100px; 
+    font-size: 1em;
+    max-height: 620px;
 }
 
 .impact-header-main {
     font-family: 'Vollkorn SC', serif;
+    text-align: center;
+    font-size: 2em;
+    text-shadow: 2px 2px RGBA(40,80,37,0.70);
+    margin: 0;
+}
+
+.info-scroll {
+    width: 320px;
+    max-height: 500px;
+}
+
+.slick-slider {
+    width: 320px;
+    margin: auto;
+}
+
+.slick-dots {
+    display: none;
 }
 
 .impact-full p{
     background-color:RGBA(40,80,37,0.9);
     padding: 25px;
     border-radius: 10px;
-    font-size: 18px;
     font-family: 'Montserrat', sans-serif;
 }
 
 .impact-list {
     flex-wrap: wrap;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.impact-list h3 {
+    text-align: center;
+    font-size: 2em;
+    text-shadow: 2px 2px RGBA(40,80,37,0.70);
+    margin: 0;
 }
 
 .main-list {
     background-color:RGBA(40,80,37,0.9);
+    width: 300px;
+    padding:10px;
+    margin: auto;
+    margin-bottom: 50px;
+    border-radius: 10px;
 }
 
 .solution-link {
@@ -32,163 +73,101 @@
     text-decoration: none;
 }
 
-.solution-button {
-    background-color:RGBA(40,80,37,0.9);
-    width: 230px;
-    height: 150px;
-    border: none;
-    font-size: 40px;
-    border-radius: 45px;
-    cursor: pointer;
-    font-family: 'Vollkorn SC', serif;
-}
 
-.solution-button:hover {
-    background-color: azure;
-    color: RGBA(40,80,37,0.9)
-}
-
-@media screen and (min-width: 360px) {
-    .impact-page {
-        height: 500%;
-        display: flex;
-        flex-wrap: wrap;
-    }
+@media screen and (min-width: 480px) {
     .impact-full {
-        margin-right: 10px;
-        margin-left: 10px;
-        padding-top: 100px; 
+        flex-direction: column;
+        width: 450px;
+        font-size: 1em;
     }
 
-    .impact-full h2 {
-        margin-top: 65px;
-        font-size: 35px;
-        text-shadow: 2px 2px RGBA(40,80,37,0.70);
-    }
-
-    .impact-full p {
-        font-size: 14px;
-    }
-
-    .impact-list {
-        width: 90%;
-        margin: auto;
-        margin-top: 0px;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    .solution-h3 {
-        font-size: 30px;
-        text-shadow: 2px 2px RGBA(40,80,37,0.70);
+    .slick-slider {
+        width: 425px;
     }
 
     .main-list {
-        border-radius: 10px;
-        padding: 50px;
-    }
-
-    .solution-button {
-        display: none;
+        width: 400px;
     }
 }
 
 @media screen and (min-width: 765px) {
-    .impact-page {
-        height: 400%;
-    }
-
     .impact-full {
-        width: 45%;
-        margin-left: 20px;
-        padding-top: 0px; 
+        width: 650px;
     }
     
-    .impact-full h2 {
-        margin-top: 200px;
+    /* .impact-full h2 {
+        text-align: center;
+        margin-top: 125px;
+        margin-bottom: 0;
         font-size: 60px;
         text-shadow: 2px 3px RGBA(40,80,37,0.70);
+    }
+
+    .solution-h3 {
+        margin-top: 30px;
+        margin-bottom: -30px;
+        font-size: 60px;
     }
 
     .impact-full p {
         font-size: 18px;
     } 
 
-    .solution-h3 {
-        display: none; 
-    }
-
-    .solution-button {
-        display: block;
-        margin-left: 20%;
-    }
-
     .impact-list {
         justify-content: flex-end;
         width: 36%;
         height: 20%;
-        padding-top: 150px; 
-        margin-left: 50px;
-        margin-right: 50px;
-        margin-top: 160px;
+        margin-top: 125px;
     }
 
     .main-list {
         height: 600px;
-        padding-top: 10px;
-        margin-top: 600px;
-    }
+        margin-top: 50px;
+    } */
 }
 
 @media screen and (min-width: 1000px) {
     .impact-page {
-        height: 325%;
+        display: flex;
+        height: 120%;
+    }
+    
+    .impact-header-main {
+        font-size: 2.5em;
     }
 
-    .solution-button {
-        display: block;
-        margin-left: 35%;
+    .impact-full {
+        margin-top: 200px;
+        width: 400px;
+        margin-left: 20px;
+        padding-top: 0px; 
+    }
+
+    .solution-h3 {
+        font-size: 2.5em;
     }
 
     .impact-list {
-        justify-content: flex-end;
-        width: 40%;
-        height: 20%;
-        padding-top: 150px; 
-        margin-left: 50px;
-        margin-right: 50px;
-        margin-top: 160px;
+        margin-top: 200px;
+        margin-right: 45px;
     }
 
     .main-list {
         height: 350px;
         padding-top: 10px;
-        margin-top: 600px;
     }
 }
 
 @media screen and (min-width: 1400px) {
-    .impact-page {
-        height: 255%;
-    }
+    .impact-full {
+        margin-left: 150px;
 
-    .solution-button {
-        display: block;
-        margin-left: 35%;
     }
-
     .impact-list {
-        justify-content: flex-end;
-        width: 40%;
-        height: 20%;
-        padding-top: 150px; 
-        margin-left: 50px;
-        margin-right: 50px;
-        margin-top: 160px;
+        margin-right: 150px;
     }
-
     .main-list {
-        height: 265px;
+        height: 350px;
         padding-top: 10px;
-        margin-top: 500px;
     }
 }
